--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
 	background: linear-gradient(-45deg, #054A91, #3D86D9, #2F619C, #A5BDD9);
 	background-size: 1000% 1000%;
 	animation: gradient 15s ease infinite;
+	min-width: 1100px;
 	height: 100vh;
 }
 
@@ -26,6 +27,7 @@ body {
     flex-direction: row;
 	overflow: hidden;
 	padding: 128px 5%;
+	z-index: 2;
 }
 .content-wrapper section{
 	align-items:baseline;
@@ -57,7 +59,7 @@ body {
 	padding: 32px;
 	position: absolute;
 	width: 475px;
-	z-index: 2;
+	z-index: 3;
 
 	transform: perspective(1500px) rotateY(15deg);
 	box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
@@ -77,7 +79,7 @@ body {
 	background-color: #c8d6e6;
 	border-radius: 8px;
 	position:absolute;
-	z-index: 0;
+	z-index: 2;
 }
 
 .left-section .three-dee{
@@ -100,7 +102,7 @@ body {
 	position: absolute;
     margin: auto;
     width: fit-content;
-	z-index: 2;
+	z-index: 3;
 
 	transform: perspective(1500px) rotateY(-15deg);
   	box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
@@ -193,19 +195,30 @@ body {
 	transform: translateY(100px);
 	padding:0px;
 	width:100%;
-	z-index: -1;
+	z-index: 0;
 }
 
+
 .description{
+	align-items: center;
 	bottom: calc(5vh + 5vw);
-	padding: 2vh 5vw;
-	pointer-events: all !important;
-	position: absolute;
-	width: 100%;
+	display: flex;
+	margin: 0px 64px;
+	position: inherit;
+	width: 500px;
 	z-index:10;
 }
-.description:hover{
-	cursor: pointer;
+.description *{
+	margin: 8px;
+}
+
+.description img{
+	height: 64px;
+	width: 64px;
+}
+
+.bottom-area svg{
+	z-index: -1;
 }
 
 
@@ -312,3 +325,16 @@ input[type="submit"]::-moz-focus-inner,
 sub, sup { 
 	line-height: 0;
 }
+
+
+/* mobile design layout */
+
+
+/* @media only screen and (max-width: 600px) {
+	
+
+*{
+	display:none;
+}
+
+} */
