--- a/style.css
+++ b/style.css
@@ -54,9 +54,9 @@ body {
 	color: #FFF;
 	display: flex;
 	justify-content: center;
-	margin: 16px;
 	height: 64px;
-	text-overflow: clip;
+	margin: 16px;
+	overflow: hidden;
 }
 
 .display-wrapper p{
@@ -176,7 +176,27 @@ body {
 }
 
 .error-message-wrapper{
-	display:none;
+	background: #c8d6e6;
+	border-radius: 8px;
+	color: #D64045;
+	font-family: 'Source Code Pro', monospace;
+	font-size: 1rem;
+	font-weight: bold;
+	opacity: 0;
+	padding: 8px;
+	position: absolute;
+	right: 16px;
+	top: 16px;
+	transition-duration: 300ms;
+}
+
+.opaque{
+	opacity: 1;
+	transition-duration: 300ms;
+}
+
+.error-message-wrapper .error-message{
+	margin: 0px;
 }
 
 
@@ -377,7 +397,7 @@ sub, sup {
 	}
 	
 	.left-section .three-dee{
-		height: 515px;
+		height: 540px;
 		position: absolute;
 		transform: perspective(1500px) rotateY(15deg) translate(-45px, -45px);
 		  box-shadow: rgba(0, 0, 0, 0.25) 0px 25px 50px -12px;
